--- a/app/views/product-case-testing/start.html
+++ b/app/views/product-case-testing/start.html
@@ -22,28 +22,55 @@
       <p class="govuk-body-l">Today we will ask you to complete 3 tasks:</p>
 
       <h2 class="govuk-heading-m">
-        Task 1 - create a case
+        Task 1
       </h2>
 
-      <p class="govuk-body">The case relates to a product.</p>
+      <p class="govuk-body govuk-visually-hidden">Add a product that has a matching barcode</p>
 
-      <p class="govuk-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse velit justo, pretium ut diam ut, posuere auctor diam. Suspendisse eu pharetra felis. Suspendisse faucibus mi nec odio elementum consequat. Aliquam eu felis ut lectus venenatis sagittis. Duis eu est cursus, bibendum nunc id, porta mi. Vivamus varius arcu non nibh aliquet, in luctus sem egestas. Pellentesque ullamcorper fringilla tincidunt. Nullam felis tortor, sollicitudin sed velit faucibus, molestie sagittis nibh. In hac habitasse platea dictumst.</p>
+      <p class="govuk-body">Upon investigating a Podium Sports Drinking Bottle you identify that the product poses a risk of choking as there is a small silicone valve in the affected caps (with date codes H19063 or H19175).</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>The valve could release while drinking posing a potential choking hazard</li>
+        <li>The product does not comply with the requirements of the General Product Safety Regulations 2005</li>
+        <li>The barcode labelled on the product is 886798014739.</li>
+      </ul>
+      <p class="govuk-body">You must notify OPSS about this product.</p>
 
       <h2 class="govuk-heading-m">
         Task 2
       </h2>
 
-      <p class="govuk-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse velit justo, pretium ut diam ut, posuere auctor diam. Suspendisse eu pharetra felis. Suspendisse faucibus mi nec odio elementum consequat. Aliquam eu felis ut lectus venenatis sagittis. Duis eu est cursus, bibendum nunc id, porta mi. Vivamus varius arcu non nibh aliquet, in luctus sem egestas. Pellentesque ullamcorper fringilla tincidunt. Nullam felis tortor, sollicitudin sed velit faucibus, molestie sagittis nibh. In hac habitasse platea dictumst.</p>
+      <p class="govuk-body govuk-visually-hidden">Add a product that matches a product already in the system: we hide the product from the search results so that it throws a match later</p>
+
+      <p class="govuk-body">Upon investigating an EMANBA Electric Scooter you identify that the product poses a serious risk as the speed is not limited to the maximum restriction. Consumers may not be able to stop safely due to unrestricted speeds, which could result in a crash and serious injuries.</p>
+      <p class="govuk-body">The product does not meet the requirements of the Supply of Machinery Regulations 2008.</p>
+      <p class="govuk-body">You must notify OPSS about this product.</p>
 
       <h2 class="govuk-heading-m">
         Task 3
       </h2>
 
-      <p class="govuk-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse velit justo, pretium ut diam ut, posuere auctor diam. Suspendisse eu pharetra felis. Suspendisse faucibus mi nec odio elementum consequat. Aliquam eu felis ut lectus venenatis sagittis. Duis eu est cursus, bibendum nunc id, porta mi. Vivamus varius arcu non nibh aliquet, in luctus sem egestas. Pellentesque ullamcorper fringilla tincidunt. Nullam felis tortor, sollicitudin sed velit faucibus, molestie sagittis nibh. In hac habitasse platea dictumst.</p>
+      <p class="govuk-body govuk-visually-hidden">Can't find product because it doesn't exist - and there is no match, so they create their own product. A standard journey adding product and then onto the case pages</p>
+
+      <p class="govuk-body">Upon investigating the Phillips Triple USB Output AC/DC Adaptor ADS-30W, you identify that the product presents a high risk of electric shock. The internal insulation between the mains circuitry and the USB outputs was found to be deficient and the dimensional requirements of the plug pins was not in accordance with the relevant standard (BS1363).</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>There was a potential that poor connection between the plug and socket which could lead to overheating within the product</li>
+        <li>The product was not marked with the required product markings or accompanied with safety instructions</li>
+        <li>The product does not comply with the Electrical Equipment (Safety) Regulations 2016. The barcode on the product is MC00058303.
+</li>
+      </ul>
+      <p class="govuk-body">You must notify OPSS about this product.</p>
+<!--
+on scenario 3, should we have a clearer brand?
+
+is Phillips clear enough?
+
+FYI for scenario 3 I just tweaked some existing product info, so no need to make any changes to the search
+-->
+
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-      <!--p class="govuk-body-l">Use the navigation menu at the top of this page to start.</p-->
+
 
       <!--p class="govuk-body-l">The next page will open in a new tab:</p-->
 
