header adjustments for widths plus tasks copy

--- a/app/views/layout-psd-width.html
+++ b/app/views/layout-psd-width.html
@@ -45,6 +45,13 @@
   .govuk-width-container {/*this "override" reinstates the normal width*/
     max-width: 960px !important;
   }
+  .govuk-header {
+    border-bottom: 10px solid #1d70b8;
+    padding-bottom: 10px;
+  }
+  .govuk-header__container {
+    border-bottom: none 0;
+  }
   .govuk-header__logo {
     width: 80% !important;
   }
