$govuk-brand-colour

--- a/app/views/layout-psd-width.html
+++ b/app/views/layout-psd-width.html
@@ -46,7 +46,7 @@
     max-width: 960px !important;
   }
   .govuk-header {
-    border-bottom: 10px solid #1d70b8;
+    border-bottom: 10px solid #1d70b8; /* $govuk-brand-colour */
     padding-bottom: 10px;
   }
   .govuk-header__container {
