app-identity-bar

--- a/app/views/layout-psd-width.html
+++ b/app/views/layout-psd-width.html
@@ -100,16 +100,16 @@
     width: 50%;
     padding-right: 0;
   }
+  .app-identity-bar {
+    padding-top: 10px;
+    margin-top: 0;
+  }
 }
-
 .govuk-width-container {
   padding-left: 15px;
   padding-right: 15px;
 }
-.app-identity-bar {
-  padding-top: 20px;
-  margin-top: -10px;
-}
+
 /*********** temporary override CSS for std GDS widths: ENDS ***************/
 </style>
 {% endblock %}
