hint text change

--- a/app/views/add-product-v4/might-already-exist-error.html
+++ b/app/views/add-product-v4/might-already-exist-error.html
@@ -39,7 +39,7 @@
                     </legend>
 
                     <div id="isit-hint" class="govuk-hint">
-                        It appears that the product you are adding might already exist in our records?
+                        The product you are adding might already exist in our records?
                     </div>
 
                     <div class="govuk-!-margin-top-6" style="border: 1px solid #b1b4b6; padding: 20px 20px 15px 20px; border-radius: 10px;">
@@ -110,7 +110,7 @@
 
 <hr>xxxxxxxxxxxxxxxxxxxxxxx
 <b>Is this your product?</b><br>
-It appears that the product you are adding might already exist in our records?<br><br>
+The product you are adding might already exist in our records?<br><br>
 
 
 <hr>
