--- a/app/views/add-product-v4/might-already-exist.html
+++ b/app/views/add-product-v4/might-already-exist.html
@@ -29,7 +29,7 @@
 
                     <div id="isit-hint">
                         <div class="govuk-hint">
-                            It appears that the product you are adding might already exist in our records?
+                            The product you are adding might already exist in our records?
                         </div>
 
                         <div class="govuk-!-margin-top-6" style="border: 1px solid #b1b4b6; padding: 20px 20px 15px 20px; border-radius: 10px;">
@@ -96,7 +96,7 @@
 
 <hr>xxxxxxxxxxxxxxxxxxxxxxx
 <b>Is this your product?</b><br>
-It appears that the product you are adding might already exist in our records?<br><br>
+The product you are adding might already exist in our records?<br><br>
 
 
 <hr>
