--- a/app/views/add-product-v4/might-already-exist_OLD.html
+++ b/app/views/add-product-v4/might-already-exist_OLD.html
@@ -28,7 +28,7 @@
                     </legend>
 
                     <div id="isit-hint" class="govuk-hint">
-                        It appears that the product you are adding might already exist in our records?
+                        The product you are adding might already exist in our records?
                     </div>
 
                     <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1" data-module="govuk-radios">
@@ -93,7 +93,7 @@
 
 <hr>xxxxxxxxxxxxxxxxxxxxxxx
 <b>Is this your product?</b><br>
-It appears that the product you are adding might already exist in our records?<br><br>
+The product you are adding might already exist in our records?<br><br>
 
 
 <hr>
