--- a/app/views/add-product-v4/might-already-exist-error_OLD.html
+++ b/app/views/add-product-v4/might-already-exist-error_OLD.html
@@ -39,7 +39,7 @@
                     </legend>
 
                     <div id="isit-hint" class="govuk-hint">
-                        It appears that the product you are adding might already exist in our records?
+                        The product you are adding might already exist in our records?
                     </div>
 
                     <span id="isit-error" class="govuk-error-message">
@@ -108,7 +108,7 @@
 
 <hr>xxxxxxxxxxxxxxxxxxxxxxx
 <b>Is this your product?</b><br>
-It appears that the product you are adding might already exist in our records?<br><br>
+The product you are adding might already exist in our records?<br><br>
 
 
 <hr>
