--- a/app/views/create-cases-add-products/might-already-exist-error.html
+++ b/app/views/create-cases-add-products/might-already-exist-error.html
@@ -32,7 +32,7 @@
         </h1>
 
         <div class="govuk-hint" id="isit-hint">
-            It appears that the product you are adding might already exist in our records? <span class="govuk-visually-hidden">Compare it to the product you are adding.</span>
+            The product you are adding might already exist in our records? <span class="govuk-visually-hidden">Compare it to the product you are adding.</span>
         </div>
 
         <section class="govuk-grid-row opss-panels">
