help text change

--- a/app/views/drafts-gui/inc_opss-add-cosmetics-hint.html
+++ b/app/views/drafts-gui/inc_opss-add-cosmetics-hint.html
@@ -20,7 +20,11 @@
                 </p>
 
                 <p class="govuk-body-s">
-                    You can complete individual tasks again to change information, or you can delete the entire draft.
+                    Before you accept and submit a draft you can change information by completing individual tasks again, or you can delete the entire draft.
+
+                    <!-- Before you accept and submit a draft you can complete individual tasks again to change information, or you can delete the entire draft.
+
+ You can complete individual tasks again to change information or you can delete the entire draft. -->
                 </p>
             </div>
         </details>
