--- a/app/views/index.html
+++ b/app/views/index.html
@@ -117,6 +117,7 @@
         <div class="govuk-details__text">
 
           <ul class="govuk-list govuk-list--bullet">
+            <li><a href="/cosmetics-general/completed-draft.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Approve and submit draft page</a></li>
             <!--li><a href="/responsible-person-address/responsible-person-address_individual.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - individual</a></li>
             <li><a href="/responsible-person-address/responsible-person-address_business.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - business</a></li-->
             <li>Responsible Person address form (COSBETA-1216): <br><a href="/responsible-person-address/responsible-person-address_alt.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - form page</a></li>
