--- a/app/views/cosmetics-general/completed-draft_c.html
+++ b/app/views/cosmetics-general/completed-draft_c.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <section class="govuk-grid-column-three-quarters">
 
         <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-top-5 govuk-!-margin-bottom-4 opss-summary-list-mixed">
             <div class="govuk-summary-list__row">
@@ -62,54 +62,8 @@
                 </dd>
             </div>
         </dl>
-    </div>
-</div>
 
-
-<div class="govuk-grid-row opss-equal-height-container">
-    <section class="govuk-grid-column-one-half opss-grouping opss-equal-height__col">
-        <h2 class="govuk-heading-s opss-grouping__heading-s opss-grouping__heading--norm">Responsible Person</h2>
-
-        <dl class="govuk-summary-list govuk-summary-list--no-border">
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Name</dt>
-                <dd class="govuk-summary-list__value">Smith &amp; Son</dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Address</dt>
-                <dd class="govuk-summary-list__value">                              <!-- **** new spans with every BR here **** -->
-                        100 Acacia Ave<span class="govuk-visually-hidden">, </span><br>
-                        London<span class="govuk-visually-hidden">, </span><br>
-                        England<span class="govuk-visually-hidden">, </span><br>
-                        SE11 4SJ
-                </dd>
-            </div>
-        </dl>
-    </section>
-    <section class="govuk-grid-column-one-half opss-grouping opss-equal-height__col">
-        <h2 class="govuk-heading-s opss-grouping__heading-s opss-grouping__heading--norm">Assigned contact</h2>
-
-        <dl class="govuk-summary-list govuk-summary-list--no-border">
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Name</dt>
-                <dd class="govuk-summary-list__value">Nasir</dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Email</dt>
-                <dd class="govuk-summary-list__value">namehere@example.com</dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Telephone</dt>
-                <dd class="govuk-summary-list__value">020 7947 6330</dd>
-            </div>
-        </dl>
-    </section>
-</div>
-
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-
-        <section id="product-table" class="govuk-!-margin-top-7">
+        <div id="product-table" class="govuk-!-margin-top-7">
             <h2 class="govuk-visually-hidden">The product</h2>
 
             <dl class="govuk-summary-list opss-summary-list-mixed">
@@ -132,7 +86,7 @@
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Shades</dt>
                     <dd class="govuk-summary-list__value">
-                        <ul class="govuk-list">
+                        <ul class="govuk-list govuk-list--bullet">
                             <li>
                                 green
                             </li>
@@ -169,17 +123,63 @@
                     <dd class="govuk-summary-list__value">13.0</dd>
                 </div>
             </dl>
-        </section>
+        </div>
+
+    </section>
+
+    <section class="govuk-grid-column-one-quarter">
+        <div class="opss-border-all govuk-!-padding-top-2 govuk-!-padding-right-2 govuk-!-padding-bottom-2 govuk-!-padding-left-2 govuk-!-margin-top-4 govuk-!-margin-bottom-4">
+            <h2 class="govuk-heading-s">Responsible Person</h2>
+
+            <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list-vertical">
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key govuk-!-display-block govuk-!-font-size-16">Name</dt>
+                    <dd class="govuk-summary-list__value govuk-!-display-block govuk-!-font-size-16">Smith &amp; Son</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key govuk-!-font-size-16">Address</dt>
+                    <dd class="govuk-summary-list__value govuk-!-font-size-16">
+                        100 Acacia Ave<span class="govuk-visually-hidden">, </span><br>
+                        London<span class="govuk-visually-hidden">, </span><br>
+                        England<span class="govuk-visually-hidden">, </span><br>
+                        SE11 4SJ
+                    </dd>
+                </div>
+            </dl>
+        </div>
+
+        <div class="opss-border-all govuk-!-padding-top-2 govuk-!-padding-right-2 govuk-!-padding-bottom-2 govuk-!-padding-left-2 govuk-!-margin-top-4 govuk-!-margin-bottom-4">
+            <h2 class="govuk-heading-s opss-grouping__heading-s opss-grouping__heading--norm">Assigned contact</h2>
+
+            <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list-vertical">
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key govuk-!-font-size-16">Name</dt>
+                    <dd class="govuk-summary-list__value govuk-!-font-size-16">John Smith</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key govuk-!-font-size-16">Email</dt>
+                    <dd class="govuk-summary-list__value govuk-!-font-size-16">namehere@example.com</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key govuk-!-font-size-16">Telephone</dt>
+                    <dd class="govuk-summary-list__value govuk-!-font-size-16">020 7947 6330</dd>
+                </div>
+            </dl>
+        </div>
+    </section>
+</div>
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
 
         <section id="lorem-ipsum-title" class="govuk-!-margin-top-9 opss-grouping">
-            <!--  govuk-!-margin-top-8 opss-border-all govuk-!-padding-top-4 govuk-!-padding-right-3 govuk-!-padding-bottom-0 govuk-!-padding-left-4 -->
             <h3 class="govuk-heading-m opss-grouping__heading-m">Component 1: Lorem ipsum title</h3>
 
             <dl class="govuk-summary-list opss-summary-list-mixed">
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Shades</dt>
                     <dd class="govuk-summary-list__value">
-                        <ul class="govuk-list">
+                        <ul class="govuk-list govuk-list--bullet">
                             <li>
                                 green
                             </li>
@@ -203,7 +203,7 @@
                         <abbr>CMR</abbr> substances
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        <ul class="govuk-list">
+                        <ul class="govuk-list govuk-list--bullet">
                             <li>
                                 nanomaterial_01
                             </li>
@@ -291,7 +291,7 @@
                         <abbr>CMR</abbr> substances
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        <ul class="govuk-list">
+                        <ul class="govuk-list govuk-list--bullet">
                             <li>
                                 Substance one, 200-21-1, 799-772-7
                             </li>
@@ -304,7 +304,7 @@
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Nanomaterials</dt>
                     <dd class="govuk-summary-list__value">
-                        <ul class="govuk-list">
+                        <ul class="govuk-list govuk-list--bullet">
                             <li>
                                 Nanomaterials name one
                             </li>
@@ -381,11 +381,6 @@
 
         </section>
 
-    </div>
-</div>
-
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
         <section class="govuk-!-margin-top-7">
             <h3 class="govuk-heading-m">Declaration</h3>
 
@@ -403,7 +398,9 @@
             </form>
 
         </section>
+
     </div>
 </div>
+
 
 {% endblock %}
