--- a/app/views/cosmetics-general/completed-draft_b.html
+++ b/app/views/cosmetics-general/completed-draft_b.html
@@ -119,14 +119,13 @@
                     <dd class="govuk-summary-list__value">12.0</dd>
                 </div>
                 <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">Maximum <abbr>pH</abbr> value</dt>
+                    <dt class="govuk-summary-list__key">Maximum <abbr title="Power of hydrogen">pH</abbr> value</dt>
                     <dd class="govuk-summary-list__value">13.0</dd>
                 </div>
             </dl>
         </section>
 
         <section id="lorem-ipsum-title" class="govuk-!-margin-top-9 opss-grouping">
-            <!--  govuk-!-margin-top-8 opss-border-all govuk-!-padding-top-4 govuk-!-padding-right-3 govuk-!-padding-bottom-0 govuk-!-padding-left-4 -->
             <h3 class="govuk-heading-m opss-grouping__heading-m">Component 1: Lorem ipsum title</h3>
 
             <dl class="govuk-summary-list opss-summary-list-mixed">
@@ -154,7 +153,7 @@
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        <abbr>CMR</abbr> substances
+                        <abbr title="Carcinogenic, mutagenic, or toxic for reproduction">CMR</abbr> substances
                     </dt>
                     <dd class="govuk-summary-list__value">
                         <ul class="govuk-list govuk-list--bullet">
@@ -242,7 +241,7 @@
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        <abbr>CMR</abbr> substances
+                        <abbr title="Carcinogenic, mutagenic, or toxic for reproduction">CMR</abbr> substances
                     </dt>
                     <dd class="govuk-summary-list__value">
                         <ul class="govuk-list govuk-list--bullet">
@@ -328,7 +327,7 @@
                     <dd class="govuk-summary-list__value"><!-- ? --></dd>
                 </div>
                 <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key"><abbr>pH</abbr> range</dt>
+                    <dt class="govuk-summary-list__key"><abbr title="Power of hydrogen">pH</abbr> range</dt>
                     <dd class="govuk-summary-list__value">13.0 to 14.0</dd>
                 </div>
             </dl>
@@ -338,7 +337,7 @@
         <section class="govuk-!-margin-top-7">
             <h3 class="govuk-heading-m">Declaration</h3>
 
-            <form action="/responsible_persons/628/notifications/41661524/confirm" accept-charset="UTF-8" method="post">
+            <form action="/responsible_persons/628/notifications/41661524/confirm" accept-charset="UTF-8" method="post" novalidate>
                 <p class="govuk-body">
                     By submitting this cosmetic product notification, you confirm that the details you provide are correct to the best of your knowledge.
                 </p>
