updated file names and index pg

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -175,6 +175,24 @@
         </div>
       </details>
 
+      <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            Cosmetics general:
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b.html" target="_blank">Incomplete product page</a>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li><a class="govuk-link govuk-link--no-visited-state strike" href="/cosmetics-general/incomplete-product_a.html" target="_blank">Incomplete alt v</a></li>
+                </ul>
+              </li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/complete-product_b_notified.html" target="_blank">Complete product page</a></li>
+            </ul>
+        </div>
+      </details>
+
       <h3 class="govuk-heading-m">Cosmetic Product draft page</h3>
       <p class="govuk-body-s">A series of 3 user journeys stepping through the visual task based flow of the draft page - required for breaking the current 'add a product' service into smaller tasks: </p>
       <p class="govuk-body"><a href="/drafts-gui/index.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Drafts <abbr>GUI</abbr> 1194</a></p>
