updates - link and inline lists

--- a/app/views/cosmetics-general/complete-product_b_notified.html
+++ b/app/views/cosmetics-general/complete-product_b_notified.html
@@ -89,7 +89,10 @@
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Label image</dt>
                     <dd class="govuk-summary-list__value">
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">vestibulum-eyedrops-bottle.jpg</a>
+                        <ul class="govuk-list govuk-list--bullet">
+                            <li><a href="#" class="govuk-link govuk-link--no-visited-state">vestibulum-eyedrops-bottle.jpg</a></li>
+                            <li><a href="#" class="govuk-link govuk-link--no-visited-state">vestibulum-eyedrops-box.jpg</a></li>
+                        </ul>
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
