--- a/app/views/cosmetics-general/incomplete-product_b.html
+++ b/app/views/cosmetics-general/incomplete-product_b.html
@@ -345,8 +345,10 @@
                 <input name="utf8" type="hidden" value="&#x2713;">
                 <input type="hidden" name="authenticity_token" value="o04ePIb64m8oHykjJA6C+qMp9ZVF8cxX8h6wQBsZljA/uTyx9NpEZEFApSymoUurKjGAV/YWDqAX0Ab0W/VF+A==">
 
-                <div class="govuk-form-group">
-                    <button class="govuk-button ">Accept and submit</button>
+                <div class="govuk-button-group">
+                    <button class="govuk-button">Accept and submit</button>
+
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">Return to <span class="govuk-visually-hidden">the</span> Cosmetic products <span class="govuk-visually-hidden">page</span></a>
                 </div>
             </form>
 
