work on new cases results page

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -368,6 +368,9 @@ dl.opss-summary-list-aside {
         tbody tr:nth-child(2) th, tbody tr:nth-child(2) td {
             padding-bottom: govuk-spacing(1);
         }
+        tbody tr:last-child th, tbody tr:last-child td {
+            padding-bottom: govuk-spacing(3);
+        }
     }
 }
 
