--- a/app/views/create-cases-add-products/cases-page.html
+++ b/app/views/create-cases-add-products/cases-page.html
@@ -103,11 +103,11 @@
 
     <section class="govuk-grid-column-three-quarters">
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full" role="region" aria-label="Case lists">
+            <div class="govuk-grid-column-full" role="region" aria-label="Cases">
 
                 <table id="table-items" class="govuk-table opss-table-items">
                     <caption class="govuk-visually-hidden">
-                        Cases data: The table features three columns and each case is described across corresponding rows within each table body.
+                        Cases data: 4 columns with each case described across rows within each table body.
                     </caption>
                     <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
