--- a/app/views/product-case-testing/cases-page.html
+++ b/app/views/product-case-testing/cases-page.html
@@ -142,7 +142,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-01" id="status-01" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-01 status-01" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
@@ -187,7 +187,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-02" id="status-02" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-02 status-02" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
@@ -230,7 +230,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-03" id="status-03" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-03 status-03" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Enquiry</span>
@@ -271,7 +271,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-04" id="status-04" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-04 status-04" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
@@ -312,7 +312,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-05" id="status-05" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-05 status-05" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
@@ -353,7 +353,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-06" id="status-06" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-06 status-06" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Enquiry</span>
@@ -396,7 +396,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-07" id="status-07" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-07 status-07" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Enquiry</span>
@@ -437,7 +437,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-09" id="status-09" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-09 status-09" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
@@ -482,7 +482,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-08" id="status-08" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-08 status-08" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
