--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -127,6 +127,13 @@ abbr[title]{
     }
 }
 
+.opss-details--plain {
+    & > div {
+        padding: govuk-spacing(3) 0 govuk-spacing(3) 0;
+        border-left: none;
+    }
+}
+
 .opss-button-link {
     background-color: transparent !important;
     border-bottom: none !important;
@@ -369,7 +376,7 @@ dl.opss-summary-list-aside {
             padding-bottom: govuk-spacing(1);
         }
         tbody tr:last-child th, tbody tr:last-child td {
-            padding-bottom: govuk-spacing(3);
+            padding-bottom: govuk-spacing(2) + 2;
         }
     }
 }
