--- a/app/views/create-cases-add-products/cases-page-success.html
+++ b/app/views/create-cases-add-products/cases-page-success.html
@@ -162,7 +162,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-01" id="status-01" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-01 status-01" colspan="3" class="govuk-table__cell">
                                 &nbsp;
@@ -204,7 +204,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-02" id="status-02" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-02 status-02" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
@@ -247,7 +247,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-03" id="status-03" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-03 status-03" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Enquiry</span>
@@ -288,7 +288,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-04" id="status-04" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-04 status-04" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
@@ -329,7 +329,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-05" id="status-05" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-05 status-05" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
@@ -370,7 +370,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-06" id="status-06" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-06 status-06" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Enquiry</span>
@@ -413,7 +413,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-07" id="status-07" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-07 status-07" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Enquiry</span>
@@ -454,7 +454,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-08" id="status-08" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-08 status-08" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
@@ -495,7 +495,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-09" id="status-09" class="govuk-visually-hidden">
-                                Status
+                                Type
                             </th>
                             <td headers="item-09 status-09" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
