--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -129,7 +129,7 @@ abbr[title]{
 
 .opss-details--plain {
     & > div {
-        padding: govuk-spacing(3) 0 govuk-spacing(3) 0;
+        padding: govuk-spacing(3) 0;
         border-left: none;
     }
 }
