--- a/app/views/psd-general/cases-page-2.html
+++ b/app/views/psd-general/cases-page-2.html
@@ -69,7 +69,7 @@
 
 <div class="govuk-grid-row">
 
-    <section class="govuk-grid-column-one-quarter govuk-!-padding-right-1">
+    <section class="govuk-grid-column-one-third">
 
         <h2 class="govuk-heading-m">
             Filters<span class="govuk-visually-hidden">:</span>
@@ -77,7 +77,7 @@
 
         <form action="#" method="post" novalidate>
 
-            <div class="govuk-form-group opss-form-group opss-form-group--sm-labels">
+            <div class="govuk-form-group opss-form-group">
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                         Case priority
@@ -682,7 +682,7 @@
         </form>
     </section>
 
-    <section class="govuk-grid-column-three-quarters">
+    <section class="govuk-grid-column-two-thirds">
         <div class="govuk-grid-row">
            <div class="govuk-grid-column-two-thirds">
                 <p class="govuk-body-s">9 cases matching keyword(s) <span class="govuk-!-font-weight-bold">Lorem, Consectetur</span>,<span class="opss-filter-txt"> using the current filters,</span> were found.
